--- a/WEB/login.css
+++ b/WEB/login.css
@@ -1,5 +1,14 @@
+.login_form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    min-width: 100vh;
+}
+
 form {
     border: 3px solid #F1F1F1;
+    width: 50%;
 }
 
 input[type=text], input[type=password] {
